// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'acala' homa > with latest block > Homa redeem unbond works > events 1`] = `
[
  {
    "data": {
      "allowFastMatch": false,
      "liquidAmount": 1000000000000,
      "redeemer": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
    },
    "method": "RequestedRedeem",
    "section": "homa",
  },
]
`;

exports[`'acala' homa > with latest block > Homa redeem unbond works > events 2`] = `
[
  {
    "data": {
      "eraIndexWhenUnbond": 100,
      "liquidAmount": 1000000000000,
      "redeemer": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      "unbondingStakingAmount": "(rounded 120000000000)",
    },
    "method": "RedeemedByUnbond",
    "section": "homa",
  },
]
`;

exports[`'acala' homa > with latest block > Homa redeem unbond works > system events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 120000000000)",
      "stash": "(address)",
    },
    "method": "Unbonded",
    "section": "staking",
  },
  {
    "data": [
      "(hash)",
      {
        "Complete": {
          "proofSize": "(rounded 390000)",
          "refTime": "(rounded 11000000000)",
        },
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
]
`;

exports[`'acala' homa > with latest block > Homa stake works > events 1`] = `
[
  {
    "data": {
      "liquidAmountAddedToVoid": "(number)",
      "liquidAmountReceived": "(number)",
      "minter": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      "stakingCurrencyAmount": "(number)",
    },
    "method": "Minted",
    "section": "homa",
  },
]
`;

exports[`'acala' homa > with latest block > Homa stake works > events 2`] = `
[
  {
    "data": {
      "newEraIndex": 100,
    },
    "method": "CurrentEraBumped",
    "section": "homa",
  },
]
`;

exports[`'acala' homa > with latest block > Homa stake works > system events 1`] = `
[
  {
    "data": [
      "(hash)",
      {
        "Error": "Barrier",
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
  {
    "data": {
      "amount": "(number)",
      "stash": "(address)",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": [
      "(hash)",
      {
        "Complete": {
          "proofSize": "(number)",
          "refTime": "(number)",
        },
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
]
`;

exports[`'acala' homa > with latest block > Homa stake works > ump 1`] = `
[
  {
    "v2": [
      {
        "withdrawAsset": [
          {
            "fun": {
              "fungible": "(number)",
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": "(number)",
              },
            },
          },
        ],
      },
      {
        "clearOrigin": null,
      },
      {
        "buyExecution": {
          "fees": {
            "fun": {
              "fungible": "(number)",
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": "(number)",
              },
            },
          },
          "weightLimit": {
            "limited": "(number)",
          },
        },
      },
      {
        "depositAsset": {
          "assets": {
            "wild": {
              "all": null,
            },
          },
          "beneficiary": {
            "interior": {
              "x1": {
                "accountId32": {
                  "id": "(hex)",
                  "network": {
                    "any": null,
                  },
                },
              },
            },
            "parents": "(number)",
          },
          "maxAssets": "(number)",
        },
      },
    ],
  },
  {
    "v2": [
      {
        "withdrawAsset": [
          {
            "fun": {
              "fungible": "(number)",
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": "(number)",
              },
            },
          },
        ],
      },
      {
        "buyExecution": {
          "fees": {
            "fun": {
              "fungible": "(number)",
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": "(number)",
              },
            },
          },
          "weightLimit": {
            "unlimited": null,
          },
        },
      },
      {
        "transact": {
          "call": {
            "encoded": "(hex)",
          },
          "originType": "SovereignAccount",
          "requireWeightAtMost": "(number)",
        },
      },
      {
        "refundSurplus": null,
      },
      {
        "depositAsset": {
          "assets": {
            "wild": {
              "all": null,
            },
          },
          "beneficiary": {
            "interior": {
              "x1": {
                "parachain": "(number)",
              },
            },
            "parents": "(number)",
          },
          "maxAssets": "(number)",
        },
      },
    ],
  },
]
`;

exports[`'acala' homa > with specific block > unbond withdraw works > events 1`] = `
[
  {
    "data": {
      "newEraIndex": "(rounded 1000)",
    },
    "method": "CurrentEraBumped",
    "section": "homa",
  },
]
`;

exports[`'acala' homa > with specific block > unbond withdraw works > system events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 2200000000000)",
      "stash": "15sr8Dvq3AT3Z2Z1y8FnQ4VipekAHhmQnrkgzegUr1tNgbcn",
    },
    "method": "Withdrawn",
    "section": "staking",
  },
  {
    "data": [
      "(hash)",
      {
        "Complete": {
          "proofSize": "(rounded 520000)",
          "refTime": "(rounded 25000000000)",
        },
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
]
`;

exports[`'acala' homa > with specific block > unbond withdraw works > ump 1`] = `
[
  {
    "v2": [
      {
        "withdrawAsset": [
          {
            "fun": {
              "fungible": 10000000000,
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": 0,
              },
            },
          },
        ],
      },
      {
        "buyExecution": {
          "fees": {
            "fun": {
              "fungible": 10000000000,
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": 0,
              },
            },
          },
          "weightLimit": {
            "unlimited": null,
          },
        },
      },
      {
        "transact": {
          "call": {
            "encoded": "0x1a010000070305000000",
          },
          "originType": "SovereignAccount",
          "requireWeightAtMost": 10000000000,
        },
      },
      {
        "transact": {
          "call": {
            "encoded": "0x1a01000005030070617261d00700000000000000000000000000000000000000000000000000000b8f589fcc0302",
          },
          "originType": "SovereignAccount",
          "requireWeightAtMost": 10000000000,
        },
      },
      {
        "refundSurplus": null,
      },
      {
        "depositAsset": {
          "assets": {
            "wild": {
              "all": null,
            },
          },
          "beneficiary": {
            "interior": {
              "x1": {
                "parachain": 2000,
              },
            },
            "parents": 0,
          },
          "maxAssets": 1,
        },
      },
    ],
  },
]
`;

exports[`'karura' homa > with latest block > Homa redeem unbond works > events 1`] = `
[
  {
    "data": {
      "allowFastMatch": false,
      "liquidAmount": 1000000000000,
      "redeemer": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "RequestedRedeem",
    "section": "homa",
  },
]
`;

exports[`'karura' homa > with latest block > Homa redeem unbond works > events 2`] = `
[
  {
    "data": {
      "eraIndexWhenUnbond": 100,
      "liquidAmount": 1000000000000,
      "redeemer": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "unbondingStakingAmount": "(rounded 130000000000)",
    },
    "method": "RedeemedByUnbond",
    "section": "homa",
  },
]
`;

exports[`'karura' homa > with latest block > Homa redeem unbond works > system events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 130000000000)",
      "stash": "(address)",
    },
    "method": "Unbonded",
    "section": "staking",
  },
  {
    "data": [
      "(hash)",
      {
        "Complete": {
          "proofSize": "(rounded 66000)",
          "refTime": "(rounded 15000000000)",
        },
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
]
`;

exports[`'karura' homa > with latest block > Homa stake works > events 1`] = `
[
  {
    "data": {
      "liquidAmountAddedToVoid": "(number)",
      "liquidAmountReceived": "(number)",
      "minter": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "stakingCurrencyAmount": "(number)",
    },
    "method": "Minted",
    "section": "homa",
  },
]
`;

exports[`'karura' homa > with latest block > Homa stake works > events 2`] = `
[
  {
    "data": {
      "newEraIndex": 100,
    },
    "method": "CurrentEraBumped",
    "section": "homa",
  },
]
`;

exports[`'karura' homa > with latest block > Homa stake works > system events 1`] = `
[
  {
    "data": [
      "(hash)",
      {
        "Complete": {
          "proofSize": "(number)",
          "refTime": "(number)",
        },
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
  {
    "data": {
      "amount": "(number)",
      "stash": "(address)",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": [
      "(hash)",
      {
        "Complete": {
          "proofSize": "(number)",
          "refTime": "(number)",
        },
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
]
`;

exports[`'karura' homa > with latest block > Homa stake works > ump 1`] = `
[
  {
    "v2": [
      {
        "withdrawAsset": [
          {
            "fun": {
              "fungible": "(number)",
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": "(number)",
              },
            },
          },
        ],
      },
      {
        "clearOrigin": null,
      },
      {
        "buyExecution": {
          "fees": {
            "fun": {
              "fungible": "(number)",
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": "(number)",
              },
            },
          },
          "weightLimit": {
            "limited": "(number)",
          },
        },
      },
      {
        "depositAsset": {
          "assets": {
            "wild": {
              "all": null,
            },
          },
          "beneficiary": {
            "interior": {
              "x1": {
                "accountId32": {
                  "id": "(hex)",
                  "network": {
                    "any": null,
                  },
                },
              },
            },
            "parents": "(number)",
          },
          "maxAssets": "(number)",
        },
      },
    ],
  },
  {
    "v2": [
      {
        "withdrawAsset": [
          {
            "fun": {
              "fungible": "(number)",
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": "(number)",
              },
            },
          },
        ],
      },
      {
        "buyExecution": {
          "fees": {
            "fun": {
              "fungible": "(number)",
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": "(number)",
              },
            },
          },
          "weightLimit": {
            "unlimited": null,
          },
        },
      },
      {
        "transact": {
          "call": {
            "encoded": "(hex)",
          },
          "originType": "SovereignAccount",
          "requireWeightAtMost": "(number)",
        },
      },
      {
        "refundSurplus": null,
      },
      {
        "depositAsset": {
          "assets": {
            "wild": {
              "all": null,
            },
          },
          "beneficiary": {
            "interior": {
              "x1": {
                "parachain": "(number)",
              },
            },
            "parents": "(number)",
          },
          "maxAssets": "(number)",
        },
      },
    ],
  },
]
`;

exports[`'karura' homa > with specific block > unbond withdraw works > events 1`] = `
[
  {
    "data": {
      "newEraIndex": "(rounded 5000)",
    },
    "method": "CurrentEraBumped",
    "section": "homa",
  },
]
`;

exports[`'karura' homa > with specific block > unbond withdraw works > system events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 15000000000000000)",
      "stash": "FDVu3RdH5WsE2yTdXN3QMq6v1XVDK8GKjhq5oFjXe8wZYpL",
    },
    "method": "Withdrawn",
    "section": "staking",
  },
  {
    "data": [
      "(hash)",
      {
        "Complete": "(rounded 39000000000)",
      },
    ],
    "method": "ExecutedUpward",
    "section": "ump",
  },
]
`;

exports[`'karura' homa > with specific block > unbond withdraw works > ump 1`] = `
[
  {
    "v2": [
      {
        "withdrawAsset": [
          {
            "fun": {
              "fungible": 20000000000,
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": 0,
              },
            },
          },
        ],
      },
      {
        "buyExecution": {
          "fees": {
            "fun": {
              "fungible": 20000000000,
            },
            "id": {
              "concrete": {
                "interior": {
                  "here": null,
                },
                "parents": 0,
              },
            },
          },
          "weightLimit": {
            "unlimited": null,
          },
        },
      },
      {
        "transact": {
          "call": {
            "encoded": "0x18010100060305000000",
          },
          "originType": "SovereignAccount",
          "requireWeightAtMost": 20000000000,
        },
      },
      {
        "transact": {
          "call": {
            "encoded": "0x1801010004030070617261d00700000000000000000000000000000000000000000000000000000fcb6c13cb5edd34",
          },
          "originType": "SovereignAccount",
          "requireWeightAtMost": 20000000000,
        },
      },
      {
        "refundSurplus": null,
      },
      {
        "depositAsset": {
          "assets": {
            "wild": {
              "all": null,
            },
          },
          "beneficiary": {
            "interior": {
              "x1": {
                "parachain": 2000,
              },
            },
            "parents": 0,
          },
          "maxAssets": 1,
        },
      },
    ],
  },
]
`;
